added /nav/search for generic site search
